# HarmonyClient

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  convert.py  convert_groundtruth.py  output.txt  output2.txt  subset.py  vectors_base.fvecs  verify.py
benchmarks/test/origin/: test_query.fvecs
deploy/: build_nodes.py  cluster_utils.py  config.yaml  config_local.yaml  fetch_results.py  start_services.py
docker/: Dockerfile.base  Dockerfile.mpi  Dockerfile.runtime  cluster_manager.py  docker-compose.yml  entrypoint.sh  generate_compose.py  run-mpi.sh
script/: genTestVectors.py  viewFvecs.py
src/: CMakeLists.txt  Clustering.cpp  Clustering.h  IVF.cpp  IVF.h  IVFScan.hpp  Index.cpp  Index.h  README.md  avx512.h  client.cpp  common.h  divide.cpp  heap.hpp  main.cpp  master_server.cpp  master_server.h  node.cpp  node.h  order.h  query.cpp  stats.h  utils.h
src/tests/: index_test.cpp
